# saysdk

./: .gitignore  CLAUDE.md  README.md  api-reference.md  docker-compose.yaml  local-npm.sh
.cursor/rules/: documentation.mdc  js-sdk.mdc  node-sdk.mdc  python-sdk.mdc
examples/js-example/: .gitignore  package.json
examples/js-example/src/: APITester.tsx  index.tsx  server.ts
examples/python-server/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
examples/python-server/src/: __init__.py  server.py
js-sdk/: README.md  index.ts  package.json  test-prepublish.json  tsconfig.build.json
node-sdk/: .gitignore  .npmignore  .prettierignore  README.md  build.ts  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json
node-sdk/src/: credentials.ts  errors.ts  index.ts  sayna-client.ts  types.ts  webhook-receiver.ts
node-sdk/tests/: credentials.test.ts  errors.test.ts  sayna-client.test.ts  types.test.ts  webhook-receiver.test.ts  websocket-compat.test.ts
python-sdk/: .gitignore  README.md  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  tbump.toml
python-sdk/src/sayna_client/: __init__.py  client.py  credentials.py  http_client.py  types.py
python-sdk/tests/: __init__.py  test_client.py  test_credentials.py  test_http_client.py  test_types.py  test_webhook_receiver.py
